# Qt-DuoiHinhBatChu

./: .gitignore  altp.db  altp.sqbpro
DuoiHinhBatChu_Backend/: CMakeLists.txt  CMakeLists.txt.user.6236e94  auth.cpp  auth.h  config.h  connectionPool.h  database.cpp  database.h  history.cpp  history.h  main.cpp  protocolSocket.h  question.cpp  question.h  rank.cpp  rank.h  room.cpp  room.h  user.cpp  user.h  util.cpp  util.h
DuoiHinhBatChu_Frontend/: CMakeLists.txt  CMakeLists.txt.user.6236e94  CMakeLists.txt.user.8393dd9  config.cpp  config.h  info.cpp  info.h  info.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  protocolSocket.h  register.cpp  register.h  register.ui  room.cpp  room.h  room.ui  socket.cpp  socket.h
build-DuoiHinhBatChu_Backend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-DuoiHinhBatChu_Backend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-a98a20aff45d320ee78b.json  cmakeFiles-v1-40249a458814bdebea15.json  codemodel-v2-34e40e6bf04851e62812.json  codemodel-v2-6b59e6be55854395a45d.json  codemodel-v2-dbea4db9e2541dc818eb.json  directory-.-Debug-37d55ab2c8c1e7a2c80b.json  directory-.-Debug-c7f5a16888740572d654.json  index-2023-04-30T15-47-53-0896.json  index-2023-05-02T17-58-51-0771.json  target-DuoiHinhBatChu_Backend-Debug-c390ffe3404103fac8bc.json  target-DuoiHinhBatChu_Backend-Debug-dede44d5fbf2917e3c40.json
build-DuoiHinhBatChu_Backend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-DuoiHinhBatChu_Backend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-DuoiHinhBatChu_Backend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/DuoiHinhBatChu_Backend_autogen/: deps  moc_predefs.h
build-DuoiHinhBatChu_Backend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/DuoiHinhBatChu_Backend_autogen/EWIEGA46WW/: moc_database.cpp  moc_database.cpp.d
build-DuoiHinhBatChu_Frontend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-DuoiHinhBatChu_Frontend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-DuoiHinhBatChu_Frontend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-DuoiHinhBatChu_Frontend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/DuoiHinhBatChu_Frontend_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-DuoiHinhBatChu_Frontend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/DuoiHinhBatChu_Frontend_autogen/EWIEGA46WW/: moc_info.cpp  moc_info.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_networkmanager.cpp  moc_networkmanager.cpp.d  moc_register.cpp  moc_register.cpp.d  moc_room.cpp  moc_room.cpp.d  moc_socket.cpp  moc_socket.cpp.d
build-DuoiHinhBatChu_Frontend-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/DuoiHinhBatChu_Frontend_autogen/include/: ui_info.h  ui_login.h  ui_mainwindow.h  ui_register.h  ui_room.h
report/: Bao_cao.docx  FSM.drawio  Flow.drawio  report.pptx  socket.ts  usecase.drawio
report/client/: message.ts
report/server/: message.ts  room.ts
(+331 files in other folders)
